# challenger2-data-science-LATAM-parte2

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: telecomx.csv
notebooks/: 01_churn_prediction.ipynb  modelo_churn_campeon.pkl
